// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarSection Component SideBarSection renders 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <div
        class="divider"
      />
      <div
        class="section"
      >
        LABEL
      </div>
      <li
        class="item"
      >
        <div
          class=""
        >
          full url
          <div
            class="label"
          >
            LINK1
          </div>
        </div>
      </li>
      <li
        class="item"
      >
        <div
          class=""
        >
          full url
          <div
            class="label"
          >
            LINK2
          </div>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBarSection Component SideBarSection renders hidden section 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    />
  </nav>
</div>
`;
